--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/demo/main.tsx"></script>
+    <script type="module" src="/examples/robot-control-web/main.tsx"></script>
   </body>
 </html>
